--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Water</title>
+</head>
+<body>
+<body style="background-color:powderblue;">
 
+<h1>Campaña para limpiar agua sucia</h1>
+<p>Esta es una pagina web destinada al apoyo de limpiar agua sucia <br> Agua potable</p>
+
+<img src="https://www.azonano.com/images/news/NewsImage_37012.jpg" alt="Water" style="width:600px;height:500px;">
+<iframe width="853" height="480" src="https://www.youtube.com/embed/spePLAXWkQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</body>
+</html>
