--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ th, td {
 </table>
 
 <h1>Bienvenidos al Website</h1>
-<p>Website sobre gatitos.</p>
+    
+<img src="images/1.jpg">    
+<p>Website sobre agua.</p>
 
 </body>
 </html>
