--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ th, td {
 
 <h1>Bienvenidos al Website</h1>
     
-<img src="images/1.jpg">    
+<img src="images/1.jpg" style="width:400px;height:300px;">
+<img src="images/2.jpg" style="width:400px;height:300px;">    
+<img src="images/3.jpg" style="width:400px;height:300px;">    
 <p>Website sobre agua.</p>
 
 </body>
